--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -51,7 +51,7 @@
       <!-- 页面盒子 -->
       <view class="storyBox">
         <story  class="storyitem" id="story{{item.id}}"  data-focusindex='1'  wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
-        data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-isvip="{{item.isVip}}" data-contentype="{{item.contentType}}" catchclickHadle="clickHadle"  bindtap="linkAbumInfo"
+        data-id="{{item.id}}" data-collect="{{item.collect}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-isvip="{{item.isVip}}" data-contentype="{{item.contentType}}" catchclickHadle="clickHadle"  bindtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></story>
       </view>
       
