--- a/pages/abumInfo/abumInfo.wxml
+++ b/pages/abumInfo/abumInfo.wxml
@@ -36,7 +36,7 @@
     <!-- <view class="songList"> -->
     <view class="songList" animation="{{loadAnimate}}" bindtouchstart="touchStart" bindtouchend="touchEnd" bindtouchmove="touchMove">
       <view wx-if="{{showLoadTop}}" class="loading">加载中...</view>
-      <view bindtap="goPlayInfo" style="color: {{item.id === currentId ? mainColor : '#fff'}};" data-song='{{item}}' data-no='{{index}}' wx:key="index" wx:for="{{canplay}}">
+      <view bindtap="goPlayInfo" style="color: {{item.id === currentId ? mainColor : '#fff'}};display: flex" data-song='{{item}}' data-no='{{index}}' wx:key="index" wx:for="{{canplay}}">
         <image class="playGif" wx:if="{{item.id === currentId && playing}}" src="/images/playing.gif" />
         
         <text wx:if="{{sort == 'asc' && (item.id !== currentId || !playing)}}">{{start + index + 1 }}</text>
@@ -47,7 +47,7 @@
         <text class="audition" style="margin-right:3vh;border-radius:4vh;color:{{mainColor}};border: 1px solid {{mainColor}};width:16vh;text-align:center;line-height:7vh;height:7vh" wx:if="{{!item.feeType &&  item.isVipFree }}">付费</text>
         <!-- <text style="max-width:70%">{{item.title}}</text> -->
 
-        <text style="max-width:70%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-left:{{item.isVipFree ? '0' : '7.35vh'}}" class="songname">{{item.title}}</text>
+        <text style="flex: 1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-left:{{item.isVipFree ? '0' : '7.35vh'}}" class="songname">{{item.title}}</text>
         <!-- <text class="playCount">{{m1.filterNum(item.playCount)}}</text> -->
         <text style="margin-right: {{item.isVipFree ? '0' : '10vh'}}">{{item.dt}}</text>
       </view>
