--- a/pages/playInfo/playInfo.wxml
+++ b/pages/playInfo/playInfo.wxml
@@ -79,17 +79,22 @@
     <view class="songDcTitle">
       <image src="{{songInfo.coverImgUrl}}" />
       <!-- <view class="image" wx:if="{{!showImg}}"></view> -->
-      <view class="title" wx:if="{{songInfo.title}}">
-        <text  style="overflow: hidden;height:10vh;white-space: nowrap; text-overflow: ellipsis;" class="title-name">{{songInfo.title}}{{m1.showSinger(songInfo.singer)}}</text>
+      <view class="title" style="flex-direction: column;" wx:if="{{songInfo.title}}">
+        <text  style="overflow: hidden;height:10vh;white-space: nowrap; text-overflow: ellipsis;width: calc(100vw - 50vh)" class="title-name">{{songInfo.title}}{{m1.showSinger(songInfo.singer)}}</text>
         <!-- <text class="title-abumInfo" wx:if="{{abumInfoName}}">专辑：{{abumInfoName}}</text> -->
-        <view catchtap="albumClick"  data-song="{{songInfo}}"  style="position:relative;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;" class="song-type">
-          <image style="position:absolute;display: inline-block; width:8vh;height:8vh;top:1vh;left:1vh" src="../../images/leftauthor.png" class=""></image>
-          <text style="position:absolute;right:2vh;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;vertical-align: middle;display: inline-block;left:13vh;font-size:5vh;color:white;text-align:left;top:1.5vh" >{{songInfo.mediaAuthor}}</text>
+        
+
+        <view style="display: flex;align-items: baseline;">
+          <view catchtap="albumClick"  data-song="{{songInfo}}"  style="position:relative;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;" class="song-type">
+            <image style="position:absolute;display: inline-block; width:8vh;height:8vh;top:1vh;left:1vh" src="../../images/leftauthor.png" class=""></image>
+            <text style="position:absolute;right:2vh;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;vertical-align: middle;display: inline-block;left:13vh;font-size:5vh;color:white;text-align:left;top:1.5vh" >{{songInfo.mediaAuthor}}</text>
+          </view>
+          <view  catchtap="authorClick"  data-song="{{songInfo}}" style="position:relative;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;"  class="song-author">
+            <image style="position:absolute;display: inline-block; width:8vh;height:8vh;top:1vh;left:1vh" src="../../images/authorright.png" class=""></image>
+            <text style="position:absolute;right:2vh;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;display: inline-block;left:13vh;font-size:5vh;color:white;text-align:left;top:1.5vh" >{{songInfo.mediaType}}</text>
+          </view>
         </view>
-        <view  catchtap="authorClick"  data-song="{{songInfo}}" style="position:relative;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;"  class="song-author">
-          <image style="position:absolute;display: inline-block; width:8vh;height:8vh;top:1vh;left:1vh" src="../../images/authorright.png" class=""></image>
-          <text style="position:absolute;right:2vh;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;display: inline-block;left:13vh;font-size:5vh;color:white;text-align:left;top:1.5vh" >{{songInfo.mediaType}}</text>
-        </view>
+
       </view>
 
 
