--- a/components/categoryItem/index.wxml
+++ b/components/categoryItem/index.wxml
@@ -1,4 +1,4 @@
-<view class="{{className}}albumCard" style="width: {{picWidth}}">
+<view data-focusindex='2'  class="{{className}}albumCard" style="width: {{picWidth}}">
   <image class="image" src="{{datasource.src}}"></image>
   <view class="linerbg">
   </view>
@@ -19,7 +19,7 @@
       catchtap="likeOne"
       data-item="{{datasource}}">
   </view>
-  <view class="albumTit">
+  <view   class="albumTit">
     <text class="vip" wx:if="{{datasource.isVip}}" style="background-color:{{mainColor}}">VIP</text>
     <text>{{ datasource.title }}</text>
     <!-- <text wx:if="{{datasource.perceent}}">{{ datasource.perceent }}%</text> -->
