--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -34,7 +34,7 @@
      
       <!-- 页面盒子 -->
       <view style="margin-top:0vh" class="storyBox">
-        <categoryItem class="cateitem"  data-focusindex='2' wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+        <categoryItem class="cateitem"  wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
         data-id="{{item.id}}" data-title="{{item.allTitle}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></categoryItem>
       </view>
