--- a/components/story/index.wxss
+++ b/components/story/index.wxss
@@ -97,3 +97,13 @@
   border-bottom: 2px solid #dc5e4e;
   /* box-shadow: inset 4px 4px #dc5e4e, inset -4px -4px #dc5e4e; */
 }
+
+.image[focus-select=true]:before {
+  content:"";
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 2vh;
+  vertical-align: bottom;
+  box-shadow: inset 4px 4px #ffac2d, inset -4px -4px #ffac2d;
+}
