--- a/components/categoryItem/index.wxss
+++ b/components/categoryItem/index.wxss
@@ -104,4 +104,14 @@
 .albumTit[focus-select=true]{
   /* border-bottom: 2px solid #dc5e4e; */
 } 
+
+.image[focus-select=true]:before {
+  content:"";
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 2vh;
+  vertical-align: bottom;
+  box-shadow: inset 4px 4px #ffac2d, inset -4px -4px #ffac2d;
+}
   
