--- a/pages/search/search-horizontal.wxss
+++ b/pages/search/search-horizontal.wxss
@@ -85,7 +85,7 @@
   color: #fff;
   font-size: 5.5vh;
   margin-bottom: 4.89vh;
-  position: fixed;
+  /* position: fixed; */
   left: 9vh;
   top: 19vh;
 }
@@ -106,7 +106,7 @@
   width: 33.81vh;
   display: inline-block;
   margin-right: 7.6vh;
-  margin-top: 32vh;
+  /* margin-top: 32vh; */
   height: 68.6vh;
   overflow: hidden;
   position: relative;
