--- a/pages/personalCenter/personalCenter.wxml
+++ b/pages/personalCenter/personalCenter.wxml
@@ -14,9 +14,9 @@
       <view class="adminCenter" wx:if="{{!isLogin}}">
         <view class="adminCenterZwdl">暂未登录</view>
         <view class="adminCenterDetail">请登录后查看详情</view>
-        <!-- <view class="adminBtnOut" bindtap="loginIn" data-state="login" style="background-color: {{mainColor}}"
-          wx:if="{{showWxLogin}}">立即登录</view> -->
-        <button    open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class="adminBtnOut" style="background-color: {{mainColor}}"
+        <button class="adminBtnOut" bindtap="loginIn" data-state="login" style="background-color: {{mainColor}};z-index:9999;"
+          wx:if="{{showWxLogin}}">立即登录</button>
+        <button  wx:if="{{!showWxLogin}}"  open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class="adminBtnOut" style="background-color: {{mainColor}}"
           >授权登录</button>
       </view>
     </view>
